log
Sun 08 Oct 2023 06:11:54 PM UTC: 
 tests:  0|5
total_score: 0/70
6a98bc6
Sun 08 Oct 2023 06:26:22 PM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:54:20: error: invalid initializer
   54 |   int sudo[9][9] = n->sudo;
      |                    ^
sudoku.c:54:7: error: unused variable ‘sudo’ [-Werror=unused-variable]
   54 |   int sudo[9][9] = n->sudo;
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
9757ddc
Sun 08 Oct 2023 06:34:58 PM UTC: 
 sudoku.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:54:11: error: unused variable ‘k’ [-Werror=unused-variable]
   54 |   int i,j,k;
      |           ^
cc1: all warnings being treated as errors
Compilation failed
263a530
Sun 08 Oct 2023 06:35:56 PM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:59:17: error: unused variable ‘copiaN’ [-Werror=unused-variable]
   59 |           Node* copiaN = copy(n);
      |                 ^~~~~~
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
5b2749f
Sun 08 Oct 2023 06:36:28 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
test.c: In function ‘get_adj_nodes’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
6c77d1e
Sun 08 Oct 2023 06:37:10 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
test.c: In function ‘get_adj_nodes’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
4029fa8
Sun 08 Oct 2023 06:38:32 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:67:11: error: break statement not within loop or switch
   67 |   if(j<9) break;
      |           ^~~~~
Compilation failed
02c6ed8
Sun 08 Oct 2023 06:40:27 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
3bc7f86
Sun 08 Oct 2023 06:41:30 PM UTC: 
 sudoku.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_final’:
sudoku.c:73:13: error: unused variable ‘p’ [-Werror=unused-variable]
   73 |   int i,j,k,p;
      |             ^
sudoku.c:73:11: error: unused variable ‘k’ [-Werror=unused-variable]
   73 |   int i,j,k,p;
      |           ^
sudoku.c:73:9: error: unused variable ‘j’ [-Werror=unused-variable]
   73 |   int i,j,k,p;
      |         ^
sudoku.c:73:7: error: unused variable ‘i’ [-Werror=unused-variable]
   73 |   int i,j,k,p;
      |       ^
cc1: all warnings being treated as errors
Compilation failed
7e3f2eb
Sun 08 Oct 2023 06:43:47 PM UTC: 
 sudoku.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_final’:
sudoku.c:74:7: error: variable ‘marca’ set but not used [-Werror=unused-but-set-variable]
   74 |   int marca[10];
      |       ^~~~~
sudoku.c:73:13: error: unused variable ‘p’ [-Werror=unused-variable]
   73 |   int i,j,k,p;
      |             ^
sudoku.c:73:9: error: unused variable ‘j’ [-Werror=unused-variable]
   73 |   int i,j,k,p;
      |         ^
cc1: all warnings being treated as errors
Compilation failed
4b97f16
Sun 08 Oct 2023 06:47:44 PM UTC: 
 sudoku.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_final’:
sudoku.c:73:13: error: unused variable ‘p’ [-Werror=unused-variable]
   73 |   int i,j,k,p;
      |             ^
cc1: all warnings being treated as errors
Compilation failed
649e2a5
Sun 08 Oct 2023 06:49:46 PM UTC: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_final’:
sudoku.c:73:13: error: unused variable ‘p’ [-Werror=unused-variable]
   73 |   int i,j,k,p;
      |             ^
cc1: all warnings being treated as errors
Compilation failed
ecd4e26
Sun 08 Oct 2023 06:50:28 PM UTC: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_final’:
sudoku.c:73:13: error: unused variable ‘p’ [-Werror=unused-variable]
   73 |   int i,j,k,p;
      |             ^
cc1: all warnings being treated as errors
Compilation failed
ce0b986
Sun 08 Oct 2023 06:51:35 PM UTC: 
 sudoku.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_final’:
sudoku.c:73:13: error: unused variable ‘p’ [-Werror=unused-variable]
   73 |   int i,j,k,p;
      |             ^
cc1: all warnings being treated as errors
Compilation failed
62b68cd
Sun 08 Oct 2023 06:52:15 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
0361510
Sun 08 Oct 2023 06:54:46 PM UTC: 
 sudoku.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
test.c: In function ‘is_final’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
745abbc
Sun 08 Oct 2023 06:54:57 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
test.c: In function ‘is_final’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a4d7591
